--- a/css/screen.css
+++ b/css/screen.css
@@ -2,6 +2,28 @@
   #FONTS
 \*------------------------------------*/
 
+@font-face {
+    font-family: "HK Grotesk Web";
+    font-weight: 200;
+    src: url("../fonts/hkgrotesk-light-webfont.woff2") format("woff2"),url(),
+         url("../fonts/hkgrotesk-light-webfont.woff") format("woff");
+}
+
+@font-face {
+    font-family: "HK Grotesk Web";
+    font-weight: 400;
+    src: url("../fonts/hkgrotesk-regular-webfont.woff2") format("woff2"),url(),
+         url("../fonts/hkgrotesk-regular-webfont.woff") format("woff");
+}
+
+@font-face {
+    font-family: "HK Grotesk Web";
+    font-weight: 600;
+    src: url("../fonts/hkgrotesk-medium-webfont.woff2") format("woff2"),url(),
+         url("../fonts/hkgrotesk-medium-webfont.woff") format("woff");
+}
+
+
 /*------------------------------------*\
   #GENERIC
 \*------------------------------------*/
@@ -15,11 +37,18 @@
 html {
     font-size: 16px;
     line-height: 1.5;
-    font-family: Helvetica, arial, sans-serif;
-    color: #111;
+    font-family:"HK Grotesk Web", Helvetica, arial, sans-serif;
+    color: #202024;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+@media (min-width:768px){
+    htlm{
+        font-size:20px;
+        line-height: 1.6
+        }
 }
 
 *,
@@ -35,8 +64,14 @@ html {
  * Customize the background color to match your design.
  */
 
+ ::-moz-selection {
+    background: #5051DB;
+    color: white;
+    text-shadow: none;
+}
+
 ::selection {
-    background: #e85e00;
+    background: #5051DB;
     color: white;
     text-shadow: none;
 }
@@ -66,18 +101,21 @@ h1 {
     font-size: 36px;
     line-height: 48px;
     margin: 0 0 24px;
+    font-weight:200px
 }
 
 h2 {
     font-size: 32px;
     line-height: 40px;
     margin: 0 0 24px;
+    font-weight: 200 px
 }
 
 h3 {
     font-size: 26px;
     line-height: 32px;
     margin: 0 0 24px;
+    font-weight: 200
 }
 
 h4,
@@ -136,18 +174,18 @@ hr {
 }
 
 a {
-    color: RoyalBlue;
+    color: #5051DB;
     transition: all .1s ease-in-out;
 }
 
 a:visited,
 a:active {
-    color: BlueViolet;
+    color: #3e3ea8;
 }
 
 a:hover,
 a:focus {
-    color: Crimson;
+    color: #3e3ea8;
 }
 
 /*------------------------------------*\
@@ -194,7 +232,8 @@ a:focus {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    max-width: 90em; /* 90 * 16px = 1440px */
+    max-width: 70.5em; /* 90 * 16px = 1440px */
+
 }
 
 /*
@@ -317,6 +356,26 @@ a:focus {
 /*------------------------------------*\
   #COMPONENTS
 \*------------------------------------*/
+
+/*
+    Component: header
+    ---
+    Main header of the website
+*/
+
+.c-header__nav {
+    color: #5051DB
+    
+
+}
+
+@media (min-width: 992px) {
+    .c-header {
+    }
+
+    .c-header__nav {
+    }
+}
 
 /*------------------------------------*\
   #UTILITIES
@@ -557,6 +616,7 @@ a:focus {
 
 /*------------------------------------*\
   #MEDIA
+
 \*------------------------------------*/
 
 /*
