--- a/css/screen.css
+++ b/css/screen.css
@@ -377,6 +377,22 @@ a:focus {
     }
 }
 
+.c-logo {
+    height: 32px;
+
+}
+
+.c-logo__symbol {
+    height:100px
+}
+
+@media (min-width: 768px) {
+    .c-logo {
+        height:40px
+    }
+}
+
+
 /*------------------------------------*\
   #UTILITIES
 \*------------------------------------*/
