--- a/css/screen.css
+++ b/css/screen.css
@@ -236,6 +236,10 @@ a:focus {
   display: flow-root;
 }
 
+.o-row--gradient{
+  background: linear-gradient(to top right, #5051db 0%, #3887f7 100%)
+}
+
 /* size modifiers */
 
 .o-row--lg {
@@ -519,6 +523,151 @@ a:focus {
   fill: #5051db;
 }
 
+/*
+    Component: Lead
+    ---
+    Lead type treatments to style everything that differs from standard typography elements
+*/
+
+.c-lead {
+  font-weight: 200;
+}
+
+.c-lead--lg {
+  font-size: 20px;
+  line-height: 32px;
+}
+
+.c-lead--xl {
+  font-size: 26px;
+  line-height: 32px;
+}
+
+.c-lead--xxl {
+  font-size: 32px;
+  line-height: 40px;
+}
+
+.c-lead--xxxl {
+  font-size: 36px;
+  line-height: 48px;
+}
+
+/*
+    Component: CTA link
+    ---
+    Small cta link with custom animation
+*/
+
+.c-link-cta {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  padding: 4px 0;
+  transition: color .175s ease-in;
+}
+
+.c-link-cta,
+.c-link-cta:visited,
+.c-link-cta:active {
+  color: #7373F5;
+}
+
+
+.c-link-cta::after{
+  content:"";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 1px;
+  width: 100%;
+  background-color: #7373f5;
+  transform: scaleX(.5);
+  transform-origin: left;
+  transition-property: transform background-color;
+  transition-duration: .175s;
+  transition-timing-function: ease-in;
+
+}
+
+
+.c-link-cta:hover {
+  color: #3E3EA8;
+}
+
+.c-link-cta:hover::after {
+  transform: scaleX(1);
+  background-color: #3e3ea8;
+}
+
+.c-link-cta--inverse,
+.c-link-cta--inverse:visited,
+.c-link-cta--inverse:active {
+  color: white;
+}
+
+.c-link-cta--inverse:hover {
+  color: white;
+}
+
+.c-link-cta--inverse::after {
+  background-color: white;
+}
+
+.c-link-cta--inverse:hover::after {
+  background-color: white;
+}
+
+
+@media (min-width: 768px) {
+  .c-lead--lg {
+      font-size: 23px;
+      line-height: 32px;
+  }
+
+  .c-lead--xl {
+      font-size: 32px;
+      line-height: 40px;
+  }
+
+  .c-lead--xxl {
+      font-size: 41px;
+      line-height: 48px;
+  }
+
+  .c-lead--xxxl {
+      font-size: 52px;
+      line-height: 64px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .c-lead--lg {
+      font-size: 26px;
+      line-height: 36px;
+  }
+
+  .c-lead--xl {
+      font-size: 36px;
+      line-height: 48px;
+  }
+
+  .c-lead--xxl {
+      font-size: 52px;
+      line-height: 64px;
+  }
+
+  .c-lead--xxxl {
+      font-size: 66px;
+      line-height: 72px;
+  }
+}
+
+
 @media (min-width: 992px) {
   .c-logo {
     height: 40px;
@@ -617,6 +766,28 @@ a:focus {
 
 .u-5-of-6 {
   flex-basis: calc(100% / 6 * 5) !important;
+}
+
+/*
+    Utilities: color
+    ---
+    Utility classes to put specific colors onto elements
+*/
+
+.u-color-primary-light {
+  color:#7373f5 !important;
+}
+
+.u-color-primary-light_footer {
+  color:white;
+}
+
+.u-color-primary-base {
+  color: #5051db
+}
+
+.u-color-primary-dark {
+  color: #3e3ea8
 }
 
 @media (min-width: 576px) {
